# ult-clippy

./: README.md  package-lock.json  package.json  pnpm-lock.yaml
src/: App.tsx
src-tauri/: Cargo.toml  output.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: keyboard_hook.rs  lib.rs  main.rs
